Added tomcat user in the role group of manager-scrip

--- a/ansible/roles/tomcat/templates/tomcat-users.xml
+++ b/ansible/roles/tomcat/templates/tomcat-users.xml
@@ -30,6 +30,7 @@
   <!.. ..> that surrounds them.
 -->
   <user username="{{ manager_user }}" password="{{ manager_password }}" roles="manager-gui" />
+  <user username="{{ manager_user }}" password="{{ manager_password }}" roles="manager-script" />
 
 <!--
   <role rolename="tomcat"/>
