--- a/ansible/roles/nginx/templates/pizzamania.conf.j2
+++ b/ansible/roles/nginx/templates/pizzamania.conf.j2
@@ -3,7 +3,9 @@ upstream backend {
   server 127.0.0.1:8080 weight=5;
 }
 server {
+  listen 80;
   server_name {{nginx_sites[item].server_name}};
+  rewrite ^/(.*)$ /spareblue/$1 last;
   location / {
     proxy_pass http://backend;
   }
