--- a/ansible/roles/nginx/templates/pizzamania.conf.j2
+++ b/ansible/roles/nginx/templates/pizzamania.conf.j2
@@ -5,7 +5,7 @@ upstream backend {
 server {
   listen 80;
   server_name {{nginx_sites[item].server_name}};
-  rewrite ^/(.*)$ /spareblue/$1 last;
+  rewrite ^/(.*)$ /sparegreen/$1 last;
   location / {
     proxy_pass http://backend;
   }
